# descry

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  SECURITY.md  justfile  pyproject.toml
.github/workflows/: ci.yml  release.yml
claude-skill/: README.md
claude-skill/descry/: SKILL.md
claude-skill/descry/references/: cli-reference.md  mcp-tools.md  recipes.md
docs/plans/: 2026-02-26-help-encyclopedia-design.md  2026-02-26-help-encyclopedia-plan.md
pi-extension/: README.md  descry-cli.py  descry-tools.ts
src/descry/: __init__.py  _env.py  _graph.py  ast_grep.py  clang_parser.py  cli.py  cross_lang.py  dart_parser.py  dotnet_parser.py  embeddings.py  generate.py  git_history.py  go_parser.py  handlers.py  java_parser.py  mcp_server.py  php_parser.py  query.py  ruby_parser.py  skeleton.py  tree_sitter_parser.py
src/descry/scip/: adapter.py  cache.py  parser.py  pb2.py  support.py
src/descry/scip/adapters/: __init__.py  _java_compat.init.gradle  clang.py  dart.py  dotnet.py  go.py  java.py  php.py  python.py  ruby.py  rust.py  typescript.py
src/descry/web/: server.py
src/descry/web/web/: index.html  style.css
tests/: conftest.py  test_clang_parser.py  test_cli.py  test_config.py  test_dart_parser.py  test_dotnet_parser.py  test_generate.py  test_git_history.py  test_go_parser.py  test_handlers.py  test_hardening.py  test_java_parser.py  test_mcp.py  test_php_parser.py  test_query.py  test_ruby_parser.py  test_scip.py  test_scip_clang.py  test_scip_dart.py  test_scip_dotnet.py  test_scip_go.py  test_scip_java.py  test_scip_php.py  test_scip_ruby.py  test_tree_sitter_parser.py  test_web_server.py
tests/fixtures/: small_graph.json
