[project]
name = "descry"
version = "0.1.0"
description = "Codebase knowledge graph: polyglot indexer, semantic search, call-graph analysis"
requires-python = ">=3.11"
authors = [{name = "Christian Haynes"}]
license = {text = "MIT"}
readme = "README.md"
keywords = ["codegraph", "code-analysis", "mcp", "knowledge-graph", "scip", "call-graph"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = ["protobuf>=6.33.4"]

[project.urls]
Homepage = "https://github.com/06chaynes/descry"
Repository = "https://github.com/06chaynes/descry"
Issues = "https://github.com/06chaynes/descry/issues"

[project.optional-dependencies]
mcp = [
    "mcp>=1.6.0",
    # CVE floors on mcp transitive deps (constraints carry to users).
    "pyjwt>=2.12.0",
    "python-multipart>=0.0.26",
]
web = ["starlette>=0.47.2", "uvicorn>=0.32.0"]
embeddings = ["sentence-transformers>=3.0.0", "numpy>=1.24.0"]
all = ["descry[mcp,web,embeddings]"]
dev = [
    "descry[all]",
    "pytest>=9.0.3",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "httpx>=0.27.0",
    "pip-audit>=2.9.0",
    "pygments>=2.20.0",
]

[project.scripts]
descry = "descry.cli:main"
descry-mcp = "descry.mcp_server:main"
descry-generate = "descry.generate:main"
descry-web = "descry.web.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/descry"]
